--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a{
     font-family: "FontAwesome";
 }
 .topbat__sec{
-    background: #111111;
+    background: ##444;
     padding: 5px 15px;
 }
 .social__section ul li a i{
@@ -88,7 +88,7 @@ a{
     font-size: 18px;
 }
 .menu_list{
-    background-color: #111111;
+    background-color: #444;
 }
 .menu_list ul{
     padding: 0;
@@ -142,7 +142,7 @@ a{
     transition: all 0.3s ease 0s;
 }
 .feature_details{
-    background-color: #212121;
+    background-color: #444;
     padding: 25px 17px 5px;
     box-shadow: 0 4px 2px -2px #000000;
     z-index: 111;
@@ -153,7 +153,7 @@ a{
 .feature_icon{
     height: 130px;
     width: 130px;
-    background-color: #212121;
+    background-color: #444;
     line-height: 88px;
     text-align: center;
     position: absolute;
