--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ a{
     font-family: "FontAwesome";
 }
 .topbat__sec{
-    background: ##444;
+    background: #444;
     padding: 5px 15px;
 }
 .social__section ul li a i{
-    color: #888888;
+    color: #fff;
     font-size: 12px;
 }
 .fa-bank{
@@ -104,7 +104,7 @@ a{
 }
 .menu_list ul li a{
     text-decoration: none;
-    color: #bbbbbb;
+    color: #fff;
 }
 #banner__secction{
     background-image: linear-gradient(to bottom, rgb(0 0 0 / 56%) 0%, rgb(0 0 0 / 50%) 59%, rgb(0 0 0 / 28%) 100%),url(img/lp-background-bg.png);
