--- a/style.css
+++ b/style.css
@@ -19,15 +19,15 @@ a{
     font-family: "FontAwesome";
 }
 .topbat__sec{
-    background: #111111;
+    background: #ff3115;
     padding: 5px 15px;
 }
 .social__section ul li a i{
-    color: #888888;
+    color: #fff;
     font-size: 12px;
 }
 .fa-bank{
-    color: #ff3115;
+    color: #fff;
 }
 .topbat__sec .container{
     display: flex;
@@ -88,7 +88,7 @@ a{
     font-size: 18px;
 }
 .menu_list{
-    background-color: #111111;
+    background-color: #404040;
 }
 .menu_list ul{
     padding: 0;
@@ -104,10 +104,10 @@ a{
 }
 .menu_list ul li a{
     text-decoration: none;
-    color: #bbbbbb;
+    color: #fff;
 }
 #banner__secction{
-    background-image: linear-gradient(to bottom, rgb(0 0 0 / 56%) 0%, rgb(0 0 0 / 50%) 59%, rgb(0 0 0 / 28%) 100%),url(img/lp-background-bg.png);
+    background-image: linear-gradient(rgb(149 142 142 / 56%) 0%, rgb(108 107 107 / 50%) 59%, rgb(28 28 28 / 28%) 100%), url(img/lp-background-bg.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -142,7 +142,7 @@ a{
     transition: all 0.3s ease 0s;
 }
 .feature_details{
-    background-color: #212121;
+    background-color: #404040;
     padding: 25px 17px 5px;
     box-shadow: 0 4px 2px -2px #000000;
     z-index: 111;
@@ -153,7 +153,7 @@ a{
 .feature_icon{
     height: 130px;
     width: 130px;
-    background-color: #212121;
+    background-color: #404040;
     line-height: 88px;
     text-align: center;
     position: absolute;
@@ -447,7 +447,7 @@ a{
     background-position: center;
 }
 .footer-contacts{
-    background-color: #222;
+    background-color: #404040;
     color: #fff;
     text-align: center;
     padding: 30px 15px;
@@ -476,6 +476,9 @@ a{
 #empty-sec{
     height: 150px;
 }
+.footer-copyright{
+    background-color: #ff3115;
+}
 .footer-copyriht-content{
     padding: 15px 0;
 }
@@ -486,8 +489,9 @@ a{
     font-size: 14px;
 }
 .footer-copyriht-content p a{
-    color: #ff3115;
+    color: #000000;
     text-decoration: none;
+    font-weight: 600;
 }
 .about-carosul{
     margin: 2px 20px;
