--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a{
     color: #fff;
 }
 #banner__secction{
-    background-image: url(img/lp-background-bg.png);
+    background-image: url(img/website-banner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -122,12 +122,12 @@ a{
     font-size: 60px;
     text-transform: uppercase;
     color: #ffffff;
-    font-weight: 700;
+    font-weight: 600;
 }
 .banner_img_content p{
     color: #fff;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 400;
 }
 .banner_img_content button{
     background-color: #ff3115;
