--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ a{
     background-position: center;
 }
 .footer-contacts{
-    background-color: #585858;
+    background-color: #1e1e1e;
     color: #fff;
     text-align: center;
     padding: 30px 15px;
