--- a/style.css
+++ b/style.css
@@ -723,6 +723,10 @@ a{
     font-weight: 700;
     text-decoration: none;
   }
+  .highlights-img img{
+    width: 100%;
+    max-width: 600px;
+  }
 @media only screen and (max-width: 600px){
     .logo__sec,
     .menu__conatiner,
